test/data/invalid-messages/too-little-header-padding.message
## has one byte missing from header padding

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER method_call

FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.Foo'
FIELD_NAME mebr
TYPE STRING
STRING 'Bar'

FIELD_NAME unkn
TYPE STRING
STRING 'a'
ALIGN 8
## kill a padding byte
CHOP 1
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
